--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,15 @@
 {
     "version": 2,
-    "builds": [{
+    "builds": [
+        {
         "src": "index.js",
-        "use": "@versel/node"
-    }],
-    "routes": [{
+        "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
         "src": "/(.*)",
         "dest": "/index.js"
-    }]
+        }
+    ]
 }
